[package]
name = "security-cam-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = "0.1.14"
base64 = "0.21.5"
async-stream = "0.3.5"
aes-gcm = { version = "0.10.3", features = ["stream"] }
futures-core = "0.3.29"
argon2 = "0.5.2"
shuttle-runtime = "0.33.0"
actix-web = { version = "4.4.0", features = ["openssl"] }
