[package]
name = "security-cam-common"
version = "0.1.5"
edition = "2021"
description = "common code used by personal shuttle projects for creating Stream objects to send encrypted/decrypted files in chunks over the network."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = "*"
base64 = "0.21.5"
async-stream = "*"
aes-gcm = { version = "0.10.3", features = ["stream"] }
futures-core = "*"
argon2 = "0.5.2"
shuttle-runtime = "=0.49.0"
actix-web = { version = "=4.3.1", features = ["openssl"] }
futures = "*"
